test/files/neg/bugs.scala
//############################################################################
// Bugs
//############################################################################
// $Id$

//############################################################################
// Bug 271

object Bug271P {
  def p(f:Tuple2[Boolean,Boolean] => Boolean) = 1;
  def p(f:List[Any] => Boolean) = 2;
}

object Bug271Test with Application {
  Console.println(Bug271P.p((x:List[Any])=>true));
}

//############################################################################
